--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Development Dockerfile with hot reload support
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 5000
+EXPOSE 5002
 
 # Install curl and other development tools
 RUN apt-get update && \
@@ -25,7 +25,7 @@ COPY . .
 
 # Set environment variables for development
 ENV ASPNETCORE_ENVIRONMENT=Development
-ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_URLS=http://+:5002
 ENV DOTNET_USE_POLLING_FILE_WATCHER=true
 ENV ASPNETCORE_LOGGING__CONSOLE__DISABLECOLORS=false
 
@@ -34,7 +34,7 @@ RUN mkdir -p /app/wwwroot/uploads /app/logs /app/backups
 
 # Health check for development
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:5000 || exit 1
+    CMD curl -f http://localhost:5002 || exit 1
 
-# For development - run with watch for hot reload
-CMD ["dotnet", "watch", "run", "--project", "CyberRiskApp.csproj", "--no-launch-profile"]
+# For development - run directly for reliable startup
+CMD ["dotnet", "run", "--project", "CyberRiskApp.csproj", "--no-launch-profile"]
